Bug 659633 - don't traverse into XUL tree children when accessible tree is created, r=tbsaunde, f=marcoz